--- a/app/code/OV/QuickView/view/frontend/templates/product/productlist/item/quickview.phtml
+++ b/app/code/OV/QuickView/view/frontend/templates/product/productlist/item/quickview.phtml
@@ -1,13 +1,16 @@
 <?php /** @var Magento\Catalog\Block\Product\ProductList\Item\Block $block */ ?>
-<div class="actions-primary">
-    <button type="button"
-            id="quickViewButton<?php /* @noEscape */ echo $block->getProduct()->getId() ?>"
-            class="action tocart primary"
-            data-mage-init='{ "OV_QuickView/js/product/productlist/item/quickview": { } }'
-            data-id="<?php /* @noEscape */ echo $block->getProduct()->getId() ?>"
-            data-url="<?php /* @noEscape */ echo $block->getProductUrl($block->getProduct()) ?>">
-        <?php /* @noEscape */ echo __('Quick view') ?>
-    </button>
-</div>
+<?php if($block->getProduct()->getTypeId() == \Magento\ConfigurableProduct\Model\Product\Type\Configurable::TYPE_CODE):?>
+    <div class="actions-primary">
+        <button type="button"
+                id="quickViewButton<?php /* @noEscape */ echo $block->getProduct()->getId() ?>"
+                class="action tocart primary"
+                data-mage-init='{ "OV_QuickView/js/product/productlist/item/quickview": { } }'
+                data-id="<?php /* @noEscape */ echo $block->getProduct()->getId() ?>"
+                data-url="<?php /* @noEscape */ echo $block->getProductUrl($block->getProduct()) ?>">
+            <?php /* @noEscape */ echo __('Quick view') ?>
+        </button>
+    </div>
 
-<div id="quickViewContainer<?php /* @noEscape */ echo $block->getProduct()->getId() ?>"></div>
+    <div id="quickViewContainer<?php /* @noEscape */ echo $block->getProduct()->getId() ?>"></div>
+<?php endif;?>
+
